feat: integrate Vercel Speed Insights and reorder package.json for clarity
- Added <SpeedInsights /> component to App.tsx for real-time performance tracking via Vercel
- Cleanly resorted package.json keys for standard structure and improved readability

--- a/package.json
+++ b/package.json
@@ -1,34 +1,10 @@
 {
   "name": "d3-visualizations",
-  "private": false,
   "version": "1.0.0",
+  "private": false,
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "d3": "^7.9.0",
-    "framer-motion": "^12.23.24",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.5"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
-    "@tailwindcss/vite": "^4.1.17",
-    "@types/d3": "^7.4.3",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.1.0",
-    "playwright": "^1.56.1",
-    "tailwindcss": "^4.1.17",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.2"
-  },
-  "license": "MIT",
   "author": "Amanullah Manssur",
+  "license": "MIT",
   "homepage": "https://viz.amanssur.com",
   "repository": {
     "type": "git",
@@ -46,5 +22,30 @@
     "framer-motion",
     "data-visualization",
     "dashboard"
-  ]
+  ],
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
+    "d3": "^7.9.0",
+    "framer-motion": "^12.23.24",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/d3": "^7.4.3",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
+    "playwright": "^1.56.1",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.2"
+  }
 }
