feat: add i18n support and bilingual navbar toggle (EN/DE)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,6 +50,7 @@
     "skipLibCheck": true,
 
     "moduleResolution": "bundler",
+    "resolveJsonModule": true,
     "allowJs": true,
     "checkJs": false
   },
