--- a/package.json
+++ b/package.json
@@ -33,14 +33,18 @@
     "@vercel/speed-insights": "^1.2.0",
     "d3": "^7.9.0",
     "framer-motion": "^12.23.24",
+    "i18next": "^25.6.1",
+    "js-cookie": "^3.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.2.4",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
     "@types/d3": "^7.4.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
