fix: add vercel.json content

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,6 @@
-
+{
+  "rewrites": [
+    { "source": "/exercise1", "destination": "/" },
+    { "source": "/exercise2", "destination": "/" }
+  ]
+}
