feat: full platform refactor: case studies, new design system, navbar redesign, UI cleanup

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "rewrites": [
     { "source": "/exercise1", "destination": "/" },
-    { "source": "/exercise2", "destination": "/" }
+    { "source": "/exercise2", "destination": "/" },
+    { "source": "/exercise3", "destination": "/" }
   ]
 }
