--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // File Layout
-    // "rootDir": "./src",
-    // "outDir": "./dist",
+    "rootDir": ".",
+    "outDir": "./dist",
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
@@ -17,8 +17,8 @@
 
     // Other Outputs
     "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
+    "declaration": false,
+    "declarationMap": false,
 
     // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
@@ -54,5 +54,6 @@
     "allowJs": true,
     "checkJs": false
   },
-  "exclude": ["dist", "node_modules", "vite.config.js"]
+  "exclude": ["dist", "node_modules", "public", "vite.config.js", "eslint.config.js"],
+  "include": ["src", "global.d.ts"]
 }
