fix: add catch-all SPA rewrite for deep links on viz

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "rewrites": [
-    { "source": "/exercise1", "destination": "/" },
-    { "source": "/exercise2", "destination": "/" },
-    { "source": "/exercise3", "destination": "/" }
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
   ]
 }
