Refactor charts, improve styles and debug flow, Modularized components, unified config, added safer loader, updated chart styles, added test/debug hooks, improved spacing and UI polish.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,14 @@ coverage/
 .cache/
 .parcel-cache/
 
+# Playwright artifacts
+playwright-report/
+test-results/
+.playwright/
+
+# Hosting / local platform config
+.vercel/
+
 # Logs
 logs/
 *.log
