--- a/package.json
+++ b/package.json
@@ -26,7 +26,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "npx eslint . --max-warnings=0",
+    "tsc": "npx tsc --noEmit --pretty false --strict --noUnusedLocals --noUnusedParameters --noFallthroughCasesInSwitch --noImplicitOverride --noImplicitReturns --exactOptionalPropertyTypes",
+    "prettier": "npx prettier . --write",
+    "check": "npm run tsc && npm run lint",
+    "test": "npx playwright test",
+    "test:headed": "npx playwright test --headed",
+    "test:report": "npx playwright show-report",
+    "contents": "scripts/project_contents.sh"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
@@ -42,6 +50,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
     "@types/d3": "^7.4.3",
