--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "bugs": {
     "url": "https://github.com/amanssur-tech/d3-visualizations/issues"
   },
+  "engines": {
+    "node": ">=22"
+  },
   "keywords": [
     "react",
     "d3",
@@ -27,13 +30,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "npx eslint . --max-warnings=0",
-    "tsc": "npx tsc --noEmit --pretty false --strict --noUnusedLocals --noUnusedParameters --noFallthroughCasesInSwitch --noImplicitOverride --noImplicitReturns --exactOptionalPropertyTypes",
-    "prettier": "npx prettier . --write",
-    "check": "npm run tsc && npm run lint",
-    "test": "npx playwright test",
-    "test:headed": "npx playwright test --headed",
-    "test:report": "npx playwright show-report",
+    "lint": "pnpm eslint . --max-warnings=0",
+    "tsc": "tsc --noEmit",
+    "prettier": "prettier . --write",
+    "check": "pnpm tsc && pnpm lint",
+    "test": "pnpm playwright test",
+    "test:headed": "pnpm playwright test --headed",
+    "test:report": "pnpm playwright show-report",
     "contents": "scripts/project_contents.sh"
   },
   "dependencies": {
@@ -43,6 +46,7 @@
     "framer-motion": "^12.23.25",
     "i18next": "^25.7.1",
     "js-cookie": "^3.0.5",
+    "prettier": "^3.7.4",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-i18next": "^16.4.0",
@@ -59,6 +63,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
+    "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
